gitops/addons/network-policies/application/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 00-default-deny
  labels:
    platform.policy: default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
